--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="css/staly.css">
+    <link rel="stylesheet" href="css/style.css">
 
 </head>
 <body>
     <div class="login-box">
-        <h2>login</h2>
+        <h2>Login</h2>
         <form>
             <div class="user-box">
                 <input type="text"name=""required="">
